modules/scripting/java/javaclient/test/javacc/adder/adder2.jj
/* adder.jj Adding up numbers */
options {
    STATIC = false ;
}


PARSER_BEGIN(Adder)
    import java.io.*;
    class Adder {
/**
        static void main( String[] args )
        throws ParseException, TokenMgrError {
            Adder parser = new Adder( new ByteArrayInputStream("12 + 3".getBytes()) ) ;
            parser.Start() ; }
*/
    }
PARSER_END(Adder)


SKIP : { " " }
SKIP : { "\n"|"\r"|"\r\n" }
TOKEN : { < PLUS : "+" > }
TOKEN : { < NUMBER : (["0"-"9"])+ > }


int Start() :
{
  int i;
  int value;
}
{
    value = Primary()
    (
        <PLUS>
        i = Primary()
        { value += i; }
    )*
    <EOF>
    { return value; }
}

int Primary() throws NumberFormatException:
{
  Token t;
}
{
  t=<NUMBER>
  {return Integer.parseInt( t.image );}
}
